@@ -1,3 +1,8 @@
+2005-10-28  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add fgetattr() method, which currently will only be called after
+	a successful call to a create() method.
+
 2005-10-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Change kernel ABI version to 7.3
